monitoring/blackbox-exporter/2.service-clusterip.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blackbox-exporter
  namespace: monitoring
  labels:
    app: blackbox-exporter
spec:
  sessionAffinity: ClientIP
  selector:
    app: blackbox-exporter
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 9115
      targetPort: 9115
    - name: configmap-reload
      protocol: TCP
      port: 9533
      targetPort: 9533
