monitoring/blackbox-exporter/2.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blackbox-exporter
  namespace: monitoring
  labels:
    app: blackbox-exporter
spec:
  sessionAffinity: ClientIP
  selector:
    app: blackbox-exporter
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 9115
      targetPort: 9115
    - name: configmap-reload
      protocol: TCP
      port: 9533
      targetPort: 9533
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blackbox-exporter
  namespace: monitoring
  labels:
    app: blackbox-exporter
spec:
  ingressClassName: nginx
  rules:
  - host: blackbox.github.icu
    http:
      paths:
      - backend:
          service:
            name: blackbox-exporter
            port:
              number: 9115
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - blackbox.github.icu
    secretName: github-tls
