monitoring/blackbox-exporter/3.service-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blackbox-exporter
  namespace: monitoring
  labels:
    app: blackbox-exporter
spec:
  ingressClassName: nginx
  rules:
  - host: blackbox.github.icu
    http:
      paths:
      - backend:
          service:
            name: blackbox-exporter
            port:
              number: 9115
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - blackbox.github.icu
    secretName: github-tls
